[gd_scene load_steps=3 format=3 uid="uid://c6n2iuefkv55k"]

[ext_resource type="Script" uid="uid://doq1lh0fjg1k0" path="res://translator_ui.gd" id="1_otuqj"]

[sub_resource type="LabelSettings" id="LabelSettings_8wo7c"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_otuqj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LabelName" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Транслятор GLSL-HLSL"
label_settings = SubResource("LabelSettings_8wo7c")
horizontal_alignment = 1

[node name="InputText" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Введите код на GLSL..."
wrap_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LoadFileButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Загрузить файл"

[node name="TranslateButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Транслировать"

[node name="OutputText" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
placeholder_text = "Здесь будет код на HLSL"
wrap_mode = 1

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
file_mode = 0
